<resources>
    <string name="app_name">Travel Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="email_contact">tf.2.98@mail.ru</string>
    <string name="country_representation_image_text">country image</string>
    <string name="title_activity_main3">Travel Assistant</string>

    <!-- Labels of the country information activity. -->
    <string name="region">Region</string>
    <string name="country">Country</string>
    <string name="capital">Capital</string>
    <string name="population">Population</string>
    <string name="area">Area</string>
    <string name="languages">Language(s)</string>
    <string name="currencies">Currencies</string>
    <string name="domains">Domain(s)</string>
    <string name="calling">Calling code(s)</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Labels of the country information activity. -->

</resources>
