<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/country_imageview_flag_source"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/country_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/NoActionBar" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/country_textview_country_region"
                style="@style/country_information_main_text" />

            <TextView
                android:id="@+id/country_textview_country_region_label"
                style="@style/country_information_label"
                android:layout_below="@id/country_textview_country_region"
                android:text="@string/region" />

            <TextView
                android:id="@+id/country_textview_country_name"
                style="@style/country_information_main_text"
                android:layout_below="@id/country_textview_country_region_label" />

            <TextView
                android:id="@+id/country_textview_country_name_label"
                style="@style/country_information_label"
                android:layout_below="@id/country_textview_country_name"
                android:text="@string/country" />

            <TextView
                android:id="@+id/country_textview_country_capital"
                style="@style/country_information_main_text"
                android:layout_below="@id/country_textview_country_name_label" />

            <TextView
                android:id="@+id/country_textview_country_capital_label"
                style="@style/country_information_label"
                android:layout_below="@id/country_textview_country_capital"
                android:text="@string/capital" />

            <TextView
                android:id="@+id/country_textview_country_population"
                style="@style/country_information_main_text"
                android:layout_below="@id/country_textview_country_capital_label" />

            <TextView
                android:id="@+id/country_textview_country_population_label"
                style="@style/country_information_label"
                android:layout_below="@id/country_textview_country_population"
                android:text="@string/population" />

            <TextView
                android:id="@+id/country_textview_country_area"
                style="@style/country_information_main_text"
                android:layout_below="@id/country_textview_country_population_label" />

            <TextView
                android:id="@+id/country_textview_country_area_label"
                style="@style/country_information_label"
                android:layout_below="@id/country_textview_country_area"
                android:text="@string/area" />

            <TextView
                android:id="@+id/country_textview_country_languages"
                style="@style/country_information_main_text"
                android:layout_below="@id/country_textview_country_area_label" />

            <TextView
                android:id="@+id/country_textview_country_languages_label"
                style="@style/country_information_label"
                android:layout_below="@id/country_textview_country_languages"
                android:text="@string/languages" />

            <TextView
                android:id="@+id/country_textview_country_currencies"
                style="@style/country_information_main_text"
                android:layout_below="@id/country_textview_country_languages_label" />

            <TextView
                android:id="@+id/country_textview_country_currencies_label"
                style="@style/country_information_label"
                android:layout_below="@id/country_textview_country_currencies"
                android:text="@string/currencies" />

            <TextView
                android:id="@+id/country_textview_country_domains"
                style="@style/country_information_main_text"
                android:layout_below="@id/country_textview_country_currencies_label" />

            <TextView
                android:id="@+id/country_textview_country_domains_label"
                style="@style/country_information_label"
                android:layout_below="@id/country_textview_country_domains"
                android:text="@string/domains" />

            <TextView
                android:id="@+id/country_textview_country_calling"
                style="@style/country_information_main_text"
                android:layout_below="@id/country_textview_country_domains_label" />

            <TextView
                android:id="@+id/country_textview_country_calling_label"
                style="@style/country_information_label"
                android:layout_below="@id/country_textview_country_calling"
                android:text="@string/calling" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

